--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,15 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v2
-
-      - name: TypeScript Build
-        uses: alexthemaster/action-build-typescript@v1.2.1
+      
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.1.5   
+      - run: npm install typescript
+      - run: tsc
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./
+          exclude_assets: "node_modules"
